# memex

./: CLAUDE.md  Cargo.toml
memex-api/: Cargo.toml
memex-api/src/: error.rs  extract.rs  lib.rs  main.rs  state.rs
memex-api/src/routes/: audit.rs  health.rs  ingest.rs  mod.rs  retrieve.rs  shards.rs
memex-audit/: Cargo.toml
memex-audit/src/: entry.rs  filter.rs  lib.rs  log.rs
memex-cli/: Cargo.toml
memex-cli/smoke/: bhs-corpus.yaml
memex-cli/src/: main.rs  smoke.rs
memex-consent/: Cargo.toml
memex-consent/src/: lib.rs  stub.rs  token.rs
memex-ingest/: BUILD.md  Cargo.toml  README.md
memex-ingest/drivers/bhs-corpus/: Cargo.toml
memex-ingest/drivers/bhs-corpus/src/: lib.rs
memex-ingest/src/: driver.rs  lib.rs  pipeline.rs  runtime.rs
memex-ingest/tests/: bhs_corpus_e2e.rs
memex-ingest/wit/: ingestion-driver.wit
memex-retrieval/: Cargo.toml
memex-retrieval/src/: lib.rs  pipeline.rs  position.rs
memex-shards/: Cargo.toml
memex-shards/src/: cortex.rs  lib.rs  manager.rs  shard.rs  sidecar.rs
