[workspace]
resolver = "2"
members = [
    "memex-api",
    "memex-ingest",
    "memex-retrieval",
    "memex-shards",
    "memex-audit",
    "memex-consent",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
sled = "0.34"
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
async-trait = "0.1"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }

# internal
memex-shards = { path = "memex-shards" }
memex-ingest = { path = "memex-ingest" }
memex-retrieval = { path = "memex-retrieval" }
memex-audit = { path = "memex-audit" }
memex-consent = { path = "memex-consent" }
