[package]
name = "memex-api"
description = "HTTP API surface — ingest, retrieve, shard management, audit endpoints"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
memex-shards = { path = "../memex-shards" }
memex-ingest = { path = "../memex-ingest" }
memex-retrieval = { path = "../memex-retrieval" }
memex-audit = { path = "../memex-audit" }
memex-consent = { path = "../memex-consent" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
