[package]
name = "memex-api"
description = "HTTP API surface — ingest, retrieve, shard management, audit endpoints"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "memex"
path = "src/main.rs"

[dependencies]
memex-shards.workspace = true
memex-ingest.workspace = true
memex-retrieval.workspace = true
memex-audit.workspace = true
memex-consent.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
chrono.workspace = true
hex.workspace = true
sled.workspace = true
