[package]
name = "memex-consent"
description = "Consent-gated ingestion — cryptographic consent tokens, verification"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
chrono.workspace = true
sha2.workspace = true
async-trait.workspace = true
