[package]
name = "memex-retrieval"
description = "Attention-based retrieval — query over composed shards, top-K position extraction"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
memex-shards.workspace = true
memex-audit.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
