[package]
name = "memex-shards"
description = "KV cache shard management — naming, lifecycle, VMM-style tiering, sled persistence"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sled.workspace = true
uuid.workspace = true
bytes.workspace = true
chrono.workspace = true
async-trait.workspace = true
reqwest.workspace = true
